--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,27 @@
 /* index.css */
+
+:root {
+    --primary-color: #101a24;
+    --secondary-color: #89e5ff;
+    --background-color: #304d6b;
+    --text-color: #fff;
+  }
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 header {
-    background-color: rgb(114, 205, 236);
-    color: white;
+    background-color: var(--primary-color);
     text-align: center;
     padding: 1em 0;
     font-family: Arial, sans-serif;
     font-size: 1.5em;
     box-shadow: 0 4px 2px -2px gray;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    display: flex;
+    /*clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);*/
 }
 
 header h1 {
@@ -22,26 +31,41 @@ header h1 {
 }
 
 header nav {
+    display: block;
+    width: 70%;
     margin-top: 0.5em;
 }
 
 header nav a {
-    color: white;
+    color: inherit;
     text-decoration: none;
     margin: 0 1em;
     font-size: 1.2em;
-    transition: color 0.3s ease;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    transition: all 0.3s ease;
 }
 
 header nav a:hover {
-    text-decoration: underline;
-    color: #ffeb3b;
+    text-decoration: none;
+    color: var(--secondary-color);
+    text-shadow: 0 0 10px var(--secondary-color)
+}
+
+header img{
+    width: 120px;
+    height: 70px;
+    margin: auto;
 }
 
 .container {
     width: 80%;
+    height: 100%;
     margin: 0 auto;
     padding: 2em 0;
+}
+
+main{
+    min-height: 500px;
 }
 
 footer {
@@ -49,9 +73,7 @@ footer {
     color: white;
     text-align: center;
     padding: 1em 0;
-    position: fixed;
     width: 100%;
-    bottom: 0;
 }
 
 footer p {
