Added a custom logo

--- a/frontend/src/pages/kaveesha/Styles/home.css
+++ b/frontend/src/pages/kaveesha/Styles/home.css
@@ -1,5 +1,5 @@
 .home{
-    background: url(/public/Home.png);
+    background: url(/Home.png);
     width: 100%;
     min-height: 100vh;
     background-repeat: no-repeat;
