--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,9 @@ header {
     display: flex;
     /* clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); */
 }
-
+.headimg{
+    text-align: center;
+}
 header h1 {
     margin: 0;
     font-size: 2.5em;
