--- a/frontend/src/pages/manujaya/Components/components.css
+++ b/frontend/src/pages/manujaya/Components/components.css
@@ -24,20 +24,111 @@
    
     
   }
-  .enter {
+  .menter {
     display: flex;
     justify-content: center;
     align-items:center;
     margin: 20px 0;
     margin-right: 50px; 
   }
-  .btn{
+  .mbtn{
     padding: 8px 16px;
     font-size: 14px;
     cursor: pointer;
-    background-color: #b63333;
+    background-color:rgb(3, 89, 23);
+    color:#f3f9fa;
+    width: 500px;      /* Set specific width (optional) */
+   height: 50px;  
     
   }
   .form-inline{
     align-items: center;
+  }
+  .mname{
+    color: #000;
+  }
+  .mdiscription{
+    color: rgb(79, 80, 79);
+  }
+  .mmbtn{
+    width: 300px;
+  height: 40px;
+  border: none;
+  border-radius: 6px;
+  background-color: rgb(3, 89, 23);
+  color: white;
+  cursor: pointer;
+  
+  }
+
+
+  .modalBackground {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(200, 200, 200);
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modalContainer {
+    width: 500px;
+    height: 500px;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+  }
+  
+  .modalContainer .title {
+    display: inline-block;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .titleCloseBtn {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .titleCloseBtn button {
+    background-color: transparent;
+    border: none;
+    font-size: 25px;
+    cursor: pointer;
+  }
+  
+  .modalContainer .body {
+    flex: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7rem;
+    text-align: center;
+  }
+  
+  .modalContainer .footer {
+    flex: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modalContainer .footer button {
+    width: 150px;
+    height: 45px;
+    margin: 10px;
+    border: none;
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 8px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  #cancelBtn {
+    background-color: crimson;
   }
