--- a/frontend/src/pages/manujaya/bank_admin.css
+++ b/frontend/src/pages/manujaya/bank_admin.css
@@ -21,5 +21,28 @@
 }
 .mopen{
     justify-content: center; /* Centers horizontally */
-  align-items: center;
+    align-items: center;
+}
+.mmbtn{
+  position: relative;
+  width: 300px;
+  height: 40px;
+  border: none;
+  border-radius: 6px;
+  background-color: rgb(3, 89, 23);
+  color: white;
+  cursor: pointer;
+  right: -600px;
+}
+.mmmbtn{
+  position: relative;
+  width: 300px;
+  height: 40px;
+  border: none;
+  border-radius: 6px;
+  background-color: rgb(3, 89, 23);
+  color: white;
+  cursor: pointer;
+  right: -600px;
+
 }
