--- a/frontend/src/pages/manujaya/bank_admin.css
+++ b/frontend/src/pages/manujaya/bank_admin.css
@@ -32,7 +32,7 @@
   background-color: rgb(3, 89, 23);
   color: white;
   cursor: pointer;
-  right: -600px;
+  right: -500px;
 }
 .mmmbtn{
   position: relative;
@@ -43,6 +43,13 @@
   background-color: rgb(3, 89, 23);
   color: white;
   cursor: pointer;
-  right: -600px;
+  right: -500px;
 
+}
+
+.bank_admin{
+  width: 80%;
+  position: relative;
+  left: 10%;  
+  
 }
