--- a/frontend/src/pages/prabath/login/login.css
+++ b/frontend/src/pages/prabath/login/login.css
@@ -7,7 +7,7 @@
 
 /* User Icon at the Top */
 .bx {
-    color: white;
+    color: rgb(7, 59, 91);
     font-size: 120px;
     text-align: center; /* Center horizontally */
 }
