--- a/frontend/src/pages/prabath/signup/signup.css
+++ b/frontend/src/pages/prabath/signup/signup.css
@@ -1,19 +1,19 @@
 .heading{
     text-align: center;
     margin-bottom: 20px;
-    color: white;
+    color: black;
 }
 
 .signupdiv{
     width: 80vh;
     height: 100%;
-    background-color: rgb(114, 205, 236);
+    background-color: rgb(14, 115, 177);
     padding: 15px;
     font-family: Cambria Math;
     border-radius: 10px;
-    color: white;
+    color: black;
     position: relative;
-    left: 25%;
+    left: 30%;
     transform: translateY(2%);
 }
 
