updates to bank_admin

--- a/frontend/src/pages/manujaya/bank_admin.css
+++ b/frontend/src/pages/manujaya/bank_admin.css
@@ -53,3 +53,11 @@
   left: 10%;  
   
 }
+.react-multi-carousel-arrow {
+  width: 1px;   /* Adjust width */
+  height: 25px;  /* Adjust height */
+  font-size: 6px; /* Adjust font size of the arrow icon */
+  padding: 5px;  /* Adjust padding */
+  border-radius: 50%; /* Optional: make the button circular */
+}
+
