--- a/frontend/src/pages/prabath/dashboard/component/requestcard.css
+++ b/frontend/src/pages/prabath/dashboard/component/requestcard.css
@@ -1,21 +1,25 @@
 .request{
-    background-color: rgb(246, 233, 217);
+    background-color: rgb(114, 205, 236);
     display: flex;
-    width: 100%;
+    width: 440px;
     height: 50px;
-    gap: 40%;
+    gap: 35px;
     padding: 5px;
     margin-bottom: 2px;
     border-radius: 3px;
 
 }
-
+.namebox{
+    width: 250px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .btnbox{
     display: flex;
-    gap: 5px;
-    width: 100%;
+    width: 175px;
     position: relative;
-    right: 6px;
+    gap: 5px;
+    transform: translateX(-10%);
 }
 .btnbox button{
     text-align: center;
@@ -29,7 +33,7 @@
     padding: 1px;
 }
 
-.accbtn{
+.viewbtn{
     background-color: blue;
 }
 
