--- a/frontend/src/pages/prabath/dashboard/dash.css
+++ b/frontend/src/pages/prabath/dashboard/dash.css
@@ -2,14 +2,14 @@
     /* background-color: #f8f9fa; */
     display: flex;
     gap: 5px;
-    width: 65%;
+    width: 60%;
     position: relative;
-    left: 17%;
+    left: 19%;
     top: 2em;
 }
 
 .stside{
-    width: 650px;
+    width: 600px;
     height: 30em;
     
 }
@@ -19,8 +19,9 @@
     text-align: center;
 }
 .sside{
-    background-color: rgb(114, 205, 236);
-    overflow-y: auto;
+    background-color:rgb(14, 115, 177);
+    overflow-y: inherit;
+    overflow-x: hidden;
     height: 30em;
     padding: 10px;
 }
