--- a/frontend/src/pages/geesan/components/investboard.css
+++ b/frontend/src/pages/geesan/components/investboard.css
@@ -1,3 +1,7 @@
+.Udash{
+    background-image: url(/dashbg.jpg);
+    background-size: cover;
+}
 .mainContainer{
     background-color: rgba(255, 255, 255, 0.289);
     min-height: 400px;
@@ -29,8 +33,8 @@
 .subBoard {
     display: flex; /* Enables flexbox layout */
     flex-wrap: wrap;
-    justify-content: center; /* Centers items vertically */
-    align-items: left; /* Centers items horizontally */
+    justify-content: start;
+    align-items: center;
     min-height: 200px;
 }
   
