--- a/frontend/src/pages/manujaya/Components/components.css
+++ b/frontend/src/pages/manujaya/Components/components.css
@@ -1,16 +1,19 @@
 .mproduct--image {
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
+   width: 100%;
+   height: auto;
+   border-top-left-radius: 30px;
+   border-top-right-radius: 30px;
   }
   
   .mcard {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 3, 187, 0.592);
     width: 220px;
-    height: 50vh;
-    margin: auto 1rem;
+    height: 100%;
+    border-radius: 30px;
+    margin: 1rem 1rem;
     text-align: center;
     font-family: arial;
+    padding-bottom: 30px;
   }
   
   .mno_investments {
@@ -36,7 +39,7 @@
     font-size: 14px;
     cursor: pointer;
 
-    background-color:rgb(3, 89, 23);
+    background-color:rgb(33, 19, 167);
     color:#f3f9fa;
     width: 500px;      /* Set specific width (optional) */
    height: 50px;  
@@ -48,19 +51,27 @@
   }
   .mname{
     color: #000;
+    background-color: rgba(12, 0, 124, 0.299);
   }
   .mdiscription{
     color: rgb(79, 80, 79);
   }
   
 .modalBackground{
-  background-color: #000;
-  position: absolute;
-  top: 200px;
-  left: 400px;
+  width: 100%;
+  position:fixed;
+  top: 20px;
+  left: 0px;
   padding: 10px;
   border-radius: 2%;
   color: #f3f9fa;
+}
+.model_main{
+  background-color: #000;
+  width: fit-content;
+  margin: auto;
+  border-radius: 20px;
+  padding: 30px;
 }
 .manu_btn{
   position: relative;
@@ -80,7 +91,7 @@
   height: 40px;
   border: none;
   border-radius: 6px;
-  background-color: rgb(3, 89, 23);
+  background-color: rgb(7, 16, 145);
   color: white;
   cursor: pointer;
   left: 700;
@@ -90,7 +101,7 @@
   width: 500px;
 }
 .m_btn {
-  background-color: #0a5360;
+  background-color: #2f15ae;
 }
 .m_titleCloseBtn{
   position: relative;
@@ -103,13 +114,12 @@
   border-radius: 4px; 
 }
 .mm_titleCloseBtn{
-  position: relative;
-  right: -300px;
+  text-align: right;
+}
+.mm_titleCloseBtn button{
+  margin: 10px 10px;
 }
 .manu__btn{
-  position: relative;
-  right: -220px;
-
   font-size: 12px; /* Reduce the font size */
     padding: 2px 5px; /* Adjust padding */
     width: 25px; /* Set the width */
