--- a/frontend/src/pages/manujaya/bank_admin.css
+++ b/frontend/src/pages/manujaya/bank_admin.css
@@ -1,3 +1,10 @@
+.bankMain{
+  background-image: url('/bank_bg.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0px;
+}
+
 .msignupdiv{
     width: 80vh;
     height: 100%;
@@ -20,31 +27,23 @@
   height: 10vh; 
 }
 .mopen{
+    display: flex;
     justify-content: center; /* Centers horizontally */
     align-items: center;
+    z-index: 1;
 }
 .mmbtn{
-  position: relative;
-  width: 300px;
-  height: 40px;
+  z-index: 0;
   border: none;
   border-radius: 6px;
-  background-color: rgb(3, 89, 23);
+  background-color: rgb(3, 35, 89);
   color: white;
   cursor: pointer;
-  right: -500px;
 }
-.mmmbtn{
-  position: relative;
-  width: 300px;
-  height: 40px;
-  border: none;
-  border-radius: 6px;
-  background-color: rgb(3, 89, 23);
-  color: white;
-  cursor: pointer;
-  right: -500px;
-
+.corbg{
+  background-color: rgba(255, 255, 255, 0.425);
+  border-radius: 40px;
+  box-shadow: "inset 0 0 10px rgba(0, 0, 0, 0.5)" 
 }
 
 .bank_admin{
@@ -60,4 +59,10 @@
   padding: 5px;  /* Adjust padding */
   border-radius: 50%; /* Optional: make the button circular */
 }
+.modalBackground{
+  z-index: 1001;
+}
 
+.mtopic{
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
