--- a/frontend/src/pages/manujaya/Components/components.css
+++ b/frontend/src/pages/manujaya/Components/components.css
@@ -52,9 +52,9 @@
     
 
   }
-  .form-inline{
+  /* .form-inline{
     align-items: center;
-  }
+  } */
   .mname{
     color: #000;
     background-color: rgba(12, 0, 124, 0.299);
@@ -108,10 +108,10 @@
   cursor: pointer;
   left: 700;
 }
-
+/* 
 .form-control{
   width: 500px;
-}
+} */
 .m_btn {
   margin: 5px;
   background-color: #2f15ae;
