--- a/frontend/src/pages/kaveesha/Styles/AboutUs.css
+++ b/frontend/src/pages/kaveesha/Styles/AboutUs.css
@@ -98,8 +98,8 @@ button:hover {
 }
 
 .card {
-    background-color: white;
-    border-radius: 6px;
+    background-color: rgb(239, 239, 239);
+    border-radius: 26px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     transition: transform 0.2s, box-shadow 0.2s;
