Changed about layout

--- a/frontend/src/pages/kaveesha/Styles/AboutUs.css
+++ b/frontend/src/pages/kaveesha/Styles/AboutUs.css
@@ -103,7 +103,9 @@ button:hover {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     transition: transform 0.2s, box-shadow 0.2s;
-    width: 18rem;
+    min-width: 300px;
+    max-width: 400px;
+    flex: 1;
     height: 25rem;
     margin-top: 10px;
 }
