Restored previous version

--- a/frontend/src/pages/prabath/login/login.css
+++ b/frontend/src/pages/prabath/login/login.css
@@ -14,8 +14,8 @@
 
 /* Login Form Container */
 .login {
-    width: 50vh;
-    height: 60vh;
+    width: fit-content;
+    height: fit-content;
     background-color: rgb(114, 205, 236);
     padding: 15px;
     font-family: Cambria Math;
